tests/TestSimple2/simple2.java
{
    int i;
    int j;

    if (i<j)
	x=i/j;
    else
	x=j/i;

}

